Did some formatting adding some more HTML5 into the site.  Should have fixed the bug with closed tickets not showing all of the closed tickets.

--- a/css/tickets.css
+++ b/css/tickets.css
@@ -5,7 +5,7 @@ a:hover {text-decoration: underline}
 body {
     height: 100%;
     font-size: 12px;
-    font-family: 'Cantarell', arial, sans-serif;
+    font-family: arial, sans-serif;
     background: url(/tickets/css/backgrounds/wallpaper-401891.jpg);
 }
 .ilb {
